# clion-avr-c-demo

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  Readme.md  main.cpp
inc/: arduino-led.hpp
src/: main.cpp
